--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
   - pip install pylint
 script:
 #  - python3 -m unittest -v
-  - coverage run -m unittest discover
+  - coverage run -m unittest discover src/delay_server
   - pylint --exit-zero source/*
 #after_success:
 #  - bash <(curl -s https://codecov.io/bash)
