--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ script:
 #  - python3 -m unittest -v
   - cd src/delay_server; coverage run -m unittest discover
   - cd src/delay_server; pylint --exit-zero delay_server
-#after_success:
-#  - bash <(curl -s https://codecov.io/bash)
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
 #  - cd docs; sphinx-apidoc --ext-autodoc -o . ../source/; sphinx-build -a . ./_build/
 #  - cd _static; pyreverse ../../source/calculator -a1 -s1 -o png
 
