--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,12 @@ install:
   - pip install pylint
 script:
 #  - python3 -m unittest -v
-  - cd src/delay_server; coverage run -m unittest discover -v
-  - cd src/delay_server; pylint --exit-zero delay_server
-  - cd src/delay_client; coverage run -m unittest discover -v
-  - cd src/delay_client; pylint --exit-zero delay_client
+  - cd src/delay_server
+  - coverage run -m unittest discover -v
+  - pylint --exit-zero delay_server
+  - cd ../delay_client
+  - coverage run -m unittest discover -v
+  - pylint --exit-zero delay_client
 after_success:
   - bash <(curl -s https://codecov.io/bash)
 #  - cd docs; sphinx-apidoc --ext-autodoc -o . ../source/; sphinx-build -a . ./_build/
