--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ script:
   - cd ../delay_client
   - coverage run -m unittest discover -v
   - pylint --exit-zero delay_client
+  - cd ../../
+  - coverage combine src/delay_server/.coverage src/delay_client/.coverage
 after_success:
   - bash <(curl -s https://codecov.io/bash)
 #  - cd docs; sphinx-apidoc --ext-autodoc -o . ../source/; sphinx-build -a . ./_build/
