Cleanup unit test, logging, and coverage.

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,8 @@
 __pycache__
 draft
 *.log
-src/delay_server/htmlcov
+*.log.*
+src/delay_server/test/htmlcov
+src/delay_client/test/htmlcov
 .coverage
+
