--- a/src/delay_server/test/log.yaml
+++ b/src/delay_server/test/log.yaml
@@ -3,7 +3,7 @@ disable_existing_loggers: true
 
 formatters:
     standard: 
-        format: '%(asctime)s:%(name)s:%(levelname)s:%(message)s'
+        format: '%(asctime)s : %(filename)15s:%(lineno)3s : %(funcName)20s() : %(levelname)8s : %(message)s'
 
 handlers:
     debug_file_handler:
