--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,8 @@ script:
   - coverage combine src/delay_server/.coverage src/delay_client/.coverage
 after_success:
   - bash <(curl -s https://codecov.io/bash)
-#  - cd docs; sphinx-apidoc --ext-autodoc -o . ../source/; sphinx-build -a . ./_build/
-#  - cd _static; pyreverse ../../source/calculator -a1 -s1 -o png
+  - cd docs
+  - sphinx-apidoc -o server ../delay_server ../delay_server/test
+  - sphinx-apidoc -o client ../delay_client ../delay_client/test
+  - make html
 
