--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ script:
   - coverage run -m unittest discover -v
   - pylint --exit-zero delay_client
   - cd ../../
-  - coverage combine src/delay_server/.coverage src/delay_client/.coverage
+  - coverage combine delay_server/.coverage delay_client/.coverage
 after_success:
   - bash <(curl -s https://codecov.io/bash)
   - cd docs
