Redefined class structure and added GUI.

--- a/delay_server/config.ini
+++ b/delay_server/config.ini
@@ -1,8 +1,63 @@
-[mcc]
-post_recv = 1000
-port_send = 1002
+###############################################################################
+# Mission Settings
+###############################################################################
+[mission]
+# name (str): For display & logs.
+name = LMAH 6
 
-[hab]
-port_recv = 1001
-port_send = 1003
+# hab_name (str): For display & logs. 
+hab_name = LMAH
 
+# mcc_name (str): For display & logs
+mcc_name = MCC
+
+# start (str): Date & time when the mission starts. 
+#              Used as epoch to apply dynamic delays (if used).
+#              If left empty defaults to start of applicaiton.
+#              Format: yyyy-mm-dd HH:MM:SS
+#              Example: 2021-02-28 10:00:00 
+start_time = 
+
+###############################################################################
+# Network Interface
+###############################################################################
+[network]
+# mcc_port_recv (int): Server port to receive messages from MCC.
+mcc_port_recv = 1000
+# mcc_port_send (int): Server port to send messages to MCC.
+mcc_port_send = 1002
+# hab_port_recv (int): Server port to receive messages from the habitat.
+hab_port_recv = 1001
+# hab_port_send (int): Server port to send messages to the habitat.
+hab_port_send = 1003
+# reject (str): Comma separated list of IP address to reject connections. 
+#               Accepts wildcards (e.g., 192.168.1.*).
+#               If empty, assume all connections are valid. 
+reject = 
+
+###############################################################################
+# Dynamic Delay Settings
+###############################################################################
+[dynamic_delay]
+# Dynamic delays applied. 
+# - Left-hand side (int) - Epoch (in sec) relative to the mission start time
+#   when to apply the new delay expression (see mission->start_time).
+# - Right-hand side (str) - Expression in terms of variable 't' describing 
+#   how a dynamic delay changes over time. The expression is evaluated with 
+#   the sympy symbolic library. 
+# Example:
+#   100 = (t - 100) + 0.1
+#   200 = 
+0 = 0
+
+###############################################################################
+# Override Delay Settings
+###############################################################################
+[override_delay]
+# Optional override delay options. 
+# - Left-hand side (str) - Name to show on GUI to initiate override.
+# - Right-hand side (int) - Delay (in sec) associated with this override.
+# Example:
+#   Experiment 1 = 1200
+Test Override 1 = 300
+Test Override 2 = 1200
